--- a/src/assets/styles/blocks/index/auth-btn.scss
+++ b/src/assets/styles/blocks/index/auth-btn.scss
@@ -2,4 +2,11 @@
     position: absolute;
     top: 2%;
     right: 5%;
+    @include laptop {
+        right: 1%;
+    }
+    @include phones {
+        right: 50%;
+        margin-right: -90px;
+    }
 }
