--- a/src/views/pages/about.pug
+++ b/src/views/pages/about.pug
@@ -25,7 +25,7 @@ block content
             .down-btn
                 a(href="#").down-btn__link
                     +icon('portf_arrow_down', 'down-btn__icon')
-    section.section.about
+    section.about
         +triangles('about') 
         .about__left
             .about__left-title
@@ -50,11 +50,11 @@ block content
                 p Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste velit mollitia nemo reprehenderit ipsam corrupti deleniti, blanditiis sit magni fuga eveniet hic sint illo? Quae harum voluptatem optio ipsum blanditiis. 
             .about__right-content
                 +skill(skills)
-    section.section.map
+    section.map
         .google-map
         .map__data
             .contacts
-                h2.contacts__title
+                h2.contacts__titles
                     .block-subtitle.block-subtitle_contacts Контакты
                     hr
                 .contacts__data
