--- a/src/views/pages/works.pug
+++ b/src/views/pages/works.pug
@@ -31,16 +31,12 @@ block content
                 h1.work-title__title Мои работы
                 img(src="./assets/images/svg/stars2.1.svg", alt="galaxy").work-title__img
         
-    section.section.slider
+    section.slider
         +trapezoid('works')
         .slider__left
         .slider__right
-            .projects
-                .projects__show
-                .porjects__nav
-                    .nav-project
-                        .projects__down
-                        .projects__up
+        .slider__down
+        .slider__up
         
     section.feedback
         h1.feedback__title что обо мне говорят  
