--- a/src/assets/styles/blocks/about/contacts.scss
+++ b/src/assets/styles/blocks/about/contacts.scss
@@ -1,49 +1,63 @@
 .contact {
-  width: 100%;
+    width: 100%;
 }
 
 .block-subtitle_contacts {
-  line-height: 0.8;
+    line-height: 0.8;
 }
 
-.contacts__title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 30px;
+.contacts__titles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
 }
 
 .contacts__list {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 20px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 20px;
+    margin-bottom: 10px;
+    @include tablets {
+        flex-direction: column;
+    }
 }
 
 .contacts__item {
-  width: 50%;
-  margin-bottom: 20px;
-  &:nth-child(even) {
-    padding-left: 20px;
-  }
+    width: 50%;
+    margin-bottom: 30px;
+    &:nth-child(even) {
+        padding-left: 20px;
+    }
+    @include tablets {
+        width: 100%;
+        &:nth-child(even) {
+            padding-left: 0;
+        }
+    }
+    @include phones {
+        margin-bottom: 10px;
+    }
 }
 
 .contacts__icon {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .contacts__icon-img {
-  width: 45px;
-  height: 45px;
-  fill: rgb(0, 74, 210);
-  margin-right: 10px;
+    width: 45px;
+    height: 45px;
+    fill: rgb(0, 74, 210);
+    margin-right: 10px;
 }
 
 .contacts__link {
-  color: #474b57;
-  font-size: 16px;
-  font-weight: 500;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    color: #474b57;
+    font-size: 16px;
+    font-weight: 500;
+    justify-content: center;
+    align-items: center;
 }
