--- a/src/assets/styles/blocks/about/hero.scss
+++ b/src/assets/styles/blocks/about/hero.scss
@@ -26,6 +26,9 @@
     bottom: 0;
     left: 0;
     margin: auto;
+    @include phones {
+        width: 100%;
+    }
 }
 
 .down-btn__hero {
@@ -35,6 +38,7 @@
     left: 0;
     right: 0;
     margin: 0 auto;
+    z-index: 10;
 }
 
 .down-btn__works {
@@ -44,6 +48,7 @@
     left: 0;
     right: 0;
     margin: 0 auto;
+    z-index: 10;
 }
 
 .hero__works {
