--- a/src/assets/styles/blocks/about/skill.scss
+++ b/src/assets/styles/blocks/about/skill.scss
@@ -4,6 +4,14 @@
     width: 120px;
     height: 120px;
     margin: 0;
+    @include laptop {
+        width: 110px;
+        height: 110px;
+    }
+    @include tablets {
+        width: 120px;
+        height: 120px;
+    }
 }
 
 .skill__figure {
