--- a/src/assets/styles/blocks/works/teachers.scss
+++ b/src/assets/styles/blocks/works/teachers.scss
@@ -1,55 +1,71 @@
 .teachers__list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .teachers__item {
-  width: 375px;
-  margin-right: 25px;
-  &:last-child {
-    margin-right: 0;
-  }
+    width: 375px;
+    margin-right: 25px;
+    &:last-child {
+        margin-right: 0;
+    }
+    @include tablets {
+        margin-bottom: 40px;
+        margin-right: 0;
+    }
+    @include phones {
+        margin-right: 0;
+    }
+}
+.teacher{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .teacher__avatar {
-  object-fit: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
+    margin-bottom: 20px;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .teacher__img {
-  object-fit: cover;
-  width: 75px;
-  height: 75px;
-  border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .teacher__review {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .teacher__review p {
-  color: rgba(255, 255, 255);
-  font-size: 16px;
-  font-style: italic;
-  text-align: left;
+    color: rgba(255, 255, 255);
+    font-size: 16px;
+    font-style: italic;
+    text-align: left;
+    @include tablets {
+        text-align: center;
+    }
 }
 
 .teacher__name,
 .teacher__profession {
-  color: rgba(255, 255, 255);
-  font-size: 16px;
-  text-align: center;
+    color: rgba(255, 255, 255);
+    font-size: 16px;
+    text-align: center;
 }
 
 .teacher__name {
-  font-weight: 700;
-  margin-bottom: 10px;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
 
 .teacher__profession {
-  font-style: italic;
+    font-style: italic;
 }
