--- a/src/assets/styles/blocks/works/work-title.scss
+++ b/src/assets/styles/blocks/works/work-title.scss
@@ -16,10 +16,27 @@
     display: inline-block;
     position: absolute;
     z-index: 5;
+    @include laptop {
+        font-size: 52.94px;
+    }
+    @include tablets {
+        font-size: 42.94px;
+    }
+    @include phones {
+        font-size: 32.94px;
+    }
 }
 
 .work-title__img {
     transform: rotate(190deg);
     width: 263px;
     height: 170px;
+    @include laptop {
+        width: 200px;
+        height: 130px;
+    }
+    @include tablets {
+        width: 166px;
+        height: 109px;
+    }
 }
