--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @import "normalize.css";
+@import "./config/mixins.scss";
 @import "./layout/fonts.scss";
 @import "./layout/base.scss";
 @import "./layout/adjustment.scss";
