--- a/src/views/common/_mixins.pug
+++ b/src/views/common/_mixins.pug
@@ -1,5 +1,5 @@
 mixin icon(iconName, iconClass)
-  svg(class=`${iconClass}`)
+  svg(class=`${iconClass}` width='50px' height='50px')
     use(xlink:href=`assets/images/icons/sprite.svg#${iconName}`)
 
 mixin image(imagePath, imageAlt, imageClass)
