--- a/src/views/common/variables.pug
+++ b/src/views/common/variables.pug
@@ -62,7 +62,7 @@
 - 
     var skills = [
         ['Frontend', [['HTML5', 30], ['CSS3', 50], ['JavaScript', 70]]],
-        ['Backend', [['HTML5', 30], ['CSS3', 50], ['JavaScript', 70]]],
+        ['Backend', [['HTML5', 30], ['CSS3', 50], ['JavaScript', 70],['PHP', 70]]],
         ['Workflow', [['HTML5', 30], ['CSS3', 50], ['JavaScript', 70]]]
     ]
 - 
