add slider and skills on vue

--- a/src/assets/styles/blocks/works/slider.scss
+++ b/src/assets/styles/blocks/works/slider.scss
@@ -1,5 +1,9 @@
-.slider {
+.slide {
     position: relative;
+    width: 100%;
+}
+
+.slider {
     width: 100%;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
@@ -27,15 +31,18 @@
 }
 
 .slider__right {
-    background-color: darkcyan;
+    background-color: rgb(227, 226, 222);
     grid-area: right-top;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     @include tablets {
         grid-area: top;
     }
 }
 
 .slider__down {
-    background-color: greenyellow;
+    background-color: rgb(242, 240, 232);
     grid-area: r-bot-l;
     @include tablets {
         grid-area: bot-l;
@@ -44,8 +51,106 @@
 
 .slider__up {
     grid-area: r-bot-r;
-    background-color: blueviolet;
+    background-color: rgb(227, 226, 222);
     @include tablets {
         grid-area: bot-r;
     }
+}
+
+.slider__info {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider__info-hr {
+    margin-bottom: 25px;
+}
+
+.slider__info-skills {
+    color: rgba(8, 60, 150, 0.85);
+    font-size: 15.76px;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+
+.slider__info-link {
+    padding: 15px 50px;
+    background-color: #004cd1;
+    color: rgba(255, 255, 255);
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 30px;
+    outline: none;
+}
+
+.slider__big-pic {
+    display: block;
+    max-width: 90%;
+    max-height: 90%;
+}
+
+.slider__button {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    user-select: none;
+    transition: .4s;
+    &:hover{
+        opacity: .7;
+    }
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(#000, 0.2);
+        z-index: 10;
+    }
+    &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 45px;
+        height: 30px;
+        z-index: 20;
+    }
+}
+
+.slider__button_prev {
+    &::after {
+        background: svg-load('portf_arrow_down.svg', fill=#fff) center center no-repeat / contain;
+    }
+}
+
+.slider__button_next {
+    &::after {
+        background: svg-load('portf_arrow_up.svg', fill=#fff) center center no-repeat / contain;
+    }
+}
+
+.slider__button-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slider__button-pic {
+    display: block;
+    max-width: 90%;
+    max-height: 90%;
 }
