--- a/src/views/main.layout.pug
+++ b/src/views/main.layout.pug
@@ -16,7 +16,7 @@ html(lang="ru")
       .maincontent
         block content
 
-      
+    include ./components/entry.pug 
 
     script(src='bootloader.bundle.js')
     script(src='vendor.bundle.js')
