--- a/src/views/common/header.pug
+++ b/src/views/common/header.pug
@@ -2,9 +2,10 @@
     .socials
         +socials('socials', socials)
 .hamburger__hero
-    .hamburger  
-        a(href="№").hamburger__link
-            +icon('hamburger', 'hamburger__icon')
+    .hamburger 
+        span
+        span
+        span
 
 
 
