add fullmenu on vue

--- a/src/views/common/header.pug
+++ b/src/views/common/header.pug
@@ -2,7 +2,7 @@
     .socials
         +socials('socials', socials)
 .hamburger__hero
-    .hamburger 
+    .hamburger(v-on:click="change" v-bind:class="{open: isActive}")
         span
         span
         span
