--- a/src/views/main.layout.pug
+++ b/src/views/main.layout.pug
@@ -13,7 +13,7 @@ html(lang="ru")
     link(rel='stylesheet' href='main.min.css')
   body
     .wrapper
-      .maincontent
+      .maincontent#app
         block content
 
     include ./components/entry.pug 
