--- a/src/assets/styles/blocks/about/map.scss
+++ b/src/assets/styles/blocks/about/map.scss
@@ -1,5 +1,4 @@
 .map {
-    background-color: cadetblue;
     position: relative;
     min-height: 650px;
     height: 1115px;
@@ -20,6 +19,7 @@
     padding-top: 35px;
     border-radius: 15px;
     margin-top: 330px;
+    position: absolute;
     @include tablets {
         width: 350px;
         margin-top: 160px;
@@ -29,4 +29,8 @@
         width: 100%;
         border-radius: 0;
     }
+}
+#map{
+    width: 100%;
+    height: 100%;
 }
