--- a/src/assets/styles/blocks/about/skill.scss
+++ b/src/assets/styles/blocks/about/skill.scss
@@ -4,14 +4,6 @@
     width: 120px;
     height: 120px;
     margin: 0;
-    @include laptop {
-        width: 110px;
-        height: 110px;
-    }
-    @include tablets {
-        width: 120px;
-        height: 120px;
-    }
 }
 
 .skill__figure {
@@ -36,6 +28,7 @@
 }
 
 .skill__title {
+    max-width: 70%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -43,6 +36,7 @@
     transform: translate(-50%, -50%);
     font-family: Roboto;
     color: #243994;
-    font-size: 13.96px;
+    font-size: 14px;
     font-weight: 500;
+    text-align: center;
 }
