--- a/src/assets/styles/blocks/about/skills-list.scss
+++ b/src/assets/styles/blocks/about/skills-list.scss
@@ -26,7 +26,6 @@
         justify-content: center;
     }
     @include phones {
-        width: 80%;
         margin-right: 0;
     }
 }
@@ -48,4 +47,7 @@
     font-size: 28px;
     font-weight: 500;
     margin-bottom: 10px;
+    @include tablets{
+        text-align: center;
+    }
 }
