--- a/src/views/pages/works.pug
+++ b/src/views/pages/works.pug
@@ -9,6 +9,7 @@ block scripts
     script(src='works.bundle.js')
 
 block content
+    include ../common/full-menu
     section.section.hero
         include ../common/header
         .author__hero
