--- a/src/assets/styles/layout/adjustment.scss
+++ b/src/assets/styles/layout/adjustment.scss
@@ -2,7 +2,8 @@
     width: 100%;
     height: 100%;
     position: relative;
-    min-height: 100%; //overflow: hidden;
+    min-height: 100%;
+    //overflow: hidden;
 }
 
 .maincontent {
