--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -5,7 +5,7 @@ block variables
     - var titleSite = 'Личный сайт веб-разработчика';
 
 block content
-  section.section.welcome
+  section.section.welcome#auth
     .intro  
       .intro__welcome
         .avatar
