--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -6,6 +6,8 @@ block variables
 
 block content
   section.section.welcome#auth
+    .parallax
+      img(src="./assets/images/content/parallax-bg.png", alt="" data-parallax="0.1").parallax__img
     .intro  
       .intro__welcome
         .avatar
@@ -58,8 +60,6 @@ block content
           .form-auth__buttons
             button(type="button").button.button_main На главную
             button(type="submit").button.button__comein Войти
-
-
     .auth-btn
       button.button.button_auth Авторизоваться
     .copyright &copy Максим Козырицкий | Создано в LoftSchool | 2018
