add animation slider

--- a/src/assets/styles/blocks/works/slider.scss
+++ b/src/assets/styles/blocks/works/slider.scss
@@ -44,6 +44,7 @@
 .slider__down {
     background-color: rgb(255, 255, 255);
     grid-area: r-bot-l;
+    overflow: hidden;
     @include tablets {
         grid-area: bot-l;
     }
@@ -52,6 +53,7 @@
 .slider__up {
     grid-area: r-bot-r;
     background-color: rgb(227, 226, 222);
+    overflow: hidden;
     @include tablets {
         grid-area: bot-r;
     }
@@ -72,10 +74,19 @@
 
 .slider__info-skills {
     color: rgba(8, 60, 150, 0.85);
-    font-size: 15.76px;
     font-weight: 500;
     text-transform: uppercase;
     margin-bottom: 40px;
+    font-size: 0;
+    span{
+        font-size: 16px;
+        display: inline-block;
+        &.whitespace{
+            &:after{
+               content: "\00a0"; 
+            }
+        }
+    }
 }
 
 .slider__info-link {
@@ -101,7 +112,7 @@
     cursor: pointer;
     user-select: none;
     transition: .4s;
-    &:hover{
+    &:hover {
         opacity: .7;
     }
     &::before {
@@ -140,8 +151,7 @@
 
 .slider__button-wrap {
     position: absolute;
-    top: 0;
-    left: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     display: flex;
@@ -153,4 +163,91 @@
     display: block;
     max-width: 90%;
     max-height: 90%;
+}
+
+.slider__button-img-container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.slide-down-enter-active,
+.slide-down-leave-active {
+    transition: 1s;
+}
+
+.slide-down-leave {
+    bottom: 0;
+}
+
+.slide-down-leave-to {
+    bottom: -100%;
+}
+
+.slide-down-enter {
+    bottom: 100%;
+}
+
+.slide-down-enter-to {
+    bottom: 0;
+}
+
+.slide-up-enter-active,
+.slide-up-leave-active {
+    transition: 1s;
+}
+
+.slide-up-leave {
+    bottom: 0;
+}
+
+.slide-up-leave-to {
+    bottom: 100%;
+}
+
+.slide-up-enter {
+    bottom: -100%;
+}
+
+.slide-up-enter-to {
+    bottom: 0;
+}
+
+@keyframes bounceIn {
+    from,
+    20%,
+    40%,
+    60%,
+    80%,
+    to {
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    0% {
+        opacity: 0;
+        transform: scale3d(0.3, 0.3, 0.3);
+    }
+    20% {
+        transform: scale3d(1.1, 1.1, 1.1);
+    }
+    40% {
+        transform: scale3d(0.9, 0.9, 0.9);
+    }
+    60% {
+        opacity: 1;
+        transform: scale3d(1.03, 1.03, 1.03);
+    }
+    80% {
+        transform: scale3d(0.97, 0.97, 0.97);
+    }
+    to {
+        opacity: 1;
+        transform: scale3d(1, 1, 1);
+    }
+}
+
+.bounceIn {
+    animation-duration: 2s;
+    animation-name: bounceIn;
 }
