--- a/src/views/pages/blog.pug
+++ b/src/views/pages/blog.pug
@@ -6,7 +6,7 @@ block variables
     - var titleSite = 'Статьи, которые я написал';
 
 block scripts
-    script(src='about.bundle.js')
+    script(src='blog.bundle.js')
 
 block content
     include ../common/full-menu
