--- a/src/views/common/_mixins.pug
+++ b/src/views/common/_mixins.pug
@@ -23,6 +23,7 @@ mixin nav(className, items, activeItem)
       each item, ndx in items
         li(class=`${className}__item` + ( (ndx === activeItem) ? ` ${className}__item_active` : '' ) )
           a(class=`${className}__link` href='#') #{item[0]}
+    a(href="#").blog-column__anchor
 
 mixin navWelcome(className, items)
   nav(class=`${className}`)
@@ -123,3 +124,4 @@ mixin skill(skills)
 // +teacher('teachers','teacher', teacher, image)
 // +navWelcome('nav-welc', welc)
 // +skill(skills)
+
