--- a/src/views/common/full-menu.pug
+++ b/src/views/common/full-menu.pug
@@ -1,4 +1,4 @@
-section.section.full-menu(v-if="show" v-cloak)
+section.section.full-menu
         .container_full-menu
             ul.full-menu__list
                 li.full-menu__item
