--- a/src/views/components/modules/skills.pug
+++ b/src/views/components/modules/skills.pug
@@ -19,5 +19,5 @@ template#skill
   figure.skill
     svg(viewBox="0 0 100 100" preserveAspectRatio="none").skill__figure
       circle(cx="50" cy="50" r="40").skill__circle.skill__circle_under
-      circle(cx="50" cy="50" r="40" ref="color-circle" v-bind:style="{'stroke-dashoffset':dash}").skill__circle.skill__circle_above
+      circle(cx="50" cy="50" r="40" ref="color-circle").skill__circle.skill__circle_above
     .skill__title {{skillName}}
