add blog scroll js

--- a/src/views/common/header.pug
+++ b/src/views/common/header.pug
@@ -2,7 +2,7 @@
     .socials
         +socials('socials', socials)
 .hamburger__hero
-    .hamburger(v-on:click="change" v-bind:class="{open: isActive}")
+    .hamburger
         span
         span
         span
